v0.11.0/_sources/gallery/symbols/points.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/symbols/points.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_symbols_points.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_symbols_points.py:


Points
======

The :meth:`pygmt.Figure.plot` method can plot points. The plot symbol and size
is set with the ``style`` parameter.

.. GENERATED FROM PYTHON SOURCE LINES 10-27



.. image-sg:: /gallery/symbols/images/sphx_glr_points_001.png
   :alt: points
   :srcset: /gallery/symbols/images/sphx_glr_points_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import numpy as np
    import pygmt

    # Generate a random set of points to plot
    rng = np.random.default_rng(seed=42)
    region = [150, 240, -10, 60]
    x = rng.uniform(low=region[0], high=region[1], size=100)
    y = rng.uniform(low=region[2], high=region[3], size=100)


    fig = pygmt.Figure()
    # Create a 15 cm x 15 cm basemap with a Cartesian projection (X) using the
    # data region
    fig.basemap(region=region, projection="X15c", frame=True)
    # Plot using inverted triangles (i) of 0.5 cm size
    fig.plot(x=x, y=y, style="i0.5c", fill="black")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.167 seconds)


.. _sphx_glr_download_gallery_symbols_points.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: points.ipynb <points.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: points.py <points.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
